# CS-5760-Project

./: .gitignore  1_Corpus_Construction.ipynb  2.1_text_processing.py  2.2_normalization.ipynb  3_ngram_lm.py  4_text_classification.ipynb  5_sequence_labeling.py  6_neural_classification.py  Partii_q1.ipynb  Partii_q2.ipynb  README.md  pyproject.toml
data/: 4_student_message.jsonl  corpus_metadata.csv
data/normalized/: lemmatized.pkl  stemmed.pkl
