[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "pandas>=3.0.0",
    "pypdf>=6.6.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.13",
    "torch>=2.11.0",
]
